--- a/backend/app/.pre-commit-config.yaml
+++ b/backend/app/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
     rev: v3.2.0
     hooks:
     -   id: trailing-whitespace
+        exclude_types: [markdown]
     -   id: end-of-file-fixer
     -   id: check-yaml
 -   repo: https://github.com/PyCQA/bandit
