fix docker frontend_react net labels

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -220,8 +220,8 @@ services:
       labels:
         - traefik.enable=true
         - traefik.constraint-label-stack=${TRAEFIK_TAG?Variable not set}
-        - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-http.rule=PathPrefix(`/`)
-        - traefik.http.services.${STACK_NAME?Variable not set}-frontend.loadbalancer.server.port=80
+        - traefik.http.routers.${STACK_NAME?Variable not set}-frontend_react-http.rule=PathPrefix(`/`)
+        - traefik.http.services.${STACK_NAME?Variable not set}-frontend_react.loadbalancer.server.port=80
 
 volumes:
   app-db-data:
