--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -86,12 +86,12 @@ services:
     build:
       context: ./frontend_react
       args:
-        FRONTEND_ENV: dev
+        FRONTEND_ENV: development
     labels:
       - traefik.enable=true
       - traefik.constraint-label-stack=${TRAEFIK_TAG?Variable not set}
-      - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-http.rule=PathPrefix(`/`)
-      - traefik.http.services.${STACK_NAME?Variable not set}-frontend.loadbalancer.server.port=80
+      - traefik.http.routers.${STACK_NAME?Variable not set}-frontend_react-http.rule=PathPrefix(`/`)
+      - traefik.http.services.${STACK_NAME?Variable not set}-frontend_react.loadbalancer.server.port=80
 
 networks:
   traefik-public:
