--- a/frontend_react/Dockerfile
+++ b/frontend_react/Dockerfile
@@ -14,7 +14,7 @@ ARG FRONTEND_ENV=production
 ENV REACT_APP_ENV=${FRONTEND_ENV}
 
 # Comment out the next line to disable tests
-# RUN npm run test:unit
+# RUN npm run test
 
 RUN npm run build
 
