--- a/.env_sample
+++ b/.env_sample
@@ -57,3 +57,8 @@ RMQ_USER=guest
 RMQ_PASS=guest
 RMQ_CRAWLER_DOWNLOAD_QUEUE=downloads
 RMQ_CRAWLER_DOWNLOAD_EXCHANGE=downloads_exchange
+
+# Cloudflare
+
+CF_API_EMAIL=youremail@gmail.com
+CF_API_KEY=
