fix husky for monorepo

--- a/frontend_react_ts/package.json
+++ b/frontend_react_ts/package.json
@@ -77,7 +77,7 @@
     "generate": "plop --plopfile internals/generators/plopfile.ts",
     "prettify": "prettier --write",
     "extract-messages": "i18next-scanner --config=internals/extractMessages/i18next-scanner.config.js",
-    "prepare": "husky install"
+    "prepare": "cd .. && husky install frontend_react_ts/.husky"
   },
   "browserslist": {
     "production": [
