add demo client; play countdown timer

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -51,6 +51,8 @@ services:
       - "8888:8888"
     volumes:
       - ./backend/app:/app
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
     environment:
       - JUPYTER=jupyter lab --ip=0.0.0.0 --allow-root --NotebookApp.custom_display_url=http://127.0.0.1:8888
       - SERVER_HOST=http://${DOMAIN?Variable not set}
