--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -176,6 +176,10 @@ services:
       - SERVER_HOST=https://${DOMAIN?Variable not set}
       # Allow explicit env var override for tests
       - SMTP_HOST=${SMTP_HOST}
+    # Sync container time w/ system time
+    volumes:
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
     build:
       context: ./backend
       dockerfile: backend.dockerfile
