it's storming, save work

--- a/.env_sample
+++ b/.env_sample
@@ -62,3 +62,11 @@ RMQ_CRAWLER_DOWNLOAD_EXCHANGE=downloads_exchange
 
 CF_API_EMAIL=youremail@gmail.com
 CF_API_KEY=
+
+# RaceDayProcessor
+
+# Time to sleep between race pulls
+# 10 mins
+MAX_SLEEP_TIME_SECS=600
+# Time expected for processing to complete
+EXPECTED_PROCESS_TIME_SECS=60
