--- a/frontend_react_ts/package.json
+++ b/frontend_react_ts/package.json
@@ -6,8 +6,8 @@
     "@fontsource/roboto": "4.5.7",
     "@mui/icons-material": "5.8.4",
     "@mui/material": "5.8.6",
-    "@mui/styled-engine-sc": "5.8.0",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@mui/styled-engine-sc": "5.8.0",
     "@reduxjs/toolkit": "1.7.1",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
@@ -27,6 +27,7 @@
     "@types/webpack-env": "1.16.3",
     "chalk": "4.1.2",
     "cross-env": "7.0.3",
+    "d3-format": "3.1.0",
     "dayjs": "1.11.3",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
@@ -42,6 +43,7 @@
     "lint-staged": "12.1.7",
     "node-plop": "0.26.2",
     "plop": "2.7.4",
+    "pondjs": "0.9.0",
     "prettier": "2.5.1",
     "react": "18.1.0",
     "react-app-polyfill": "3.0.0",
@@ -53,6 +55,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "react-test-renderer": "18.1.0",
+    "react-timeseries-charts": "0.16.1",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
     "rimraf": "3.0.2",
